--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "next": "15.3.3",
     "node-pg-migrate": "7.9.1",
     "pg": "8.16.0",
-    "react": "19.1.0",
+    "react": "18.2.0",
     "react-bootstrap": "2.10.10",
-    "react-dom": "19.1.0"
+    "react-dom": "18.2.0",
+    "swr": "2.2.5"
   },
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
