--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react": "18.2.0",
     "react-bootstrap": "2.10.10",
     "react-dom": "18.2.0",
-    "swr": "2.2.5"
+    "swr": "2.2.5",
+    "uuid": "11.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
