--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "license": "MIT",
   "dependencies": {
     "async-retry": "1.3.3",
+    "bcryptjs": "3.0.2",
     "bootstrap": "5.3.6",
     "bootstrap-icons": "1.13.1",
     "dotenv": "16.5.0",
