--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bcryptjs": "3.0.2",
     "bootstrap": "5.3.6",
     "bootstrap-icons": "1.13.1",
+    "cookie": "1.0.2",
     "dotenv": "16.5.0",
     "dotenv-expand": "12.0.2",
     "next": "15.3.3",
@@ -56,7 +57,8 @@
     "jest": "29.7.0",
     "lint-staged": "16.1.0",
     "prettier": "3.5.3",
-    "secretlint": "9.3.4"
+    "secretlint": "9.3.4",
+    "set-cookie-parser": "2.7.1"
   },
   "config": {
     "commitizen": {
