--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next": "15.3.3",
     "next-connect": "1.0.0",
     "node-pg-migrate": "7.9.1",
+    "nodemailer": "7.0.5",
     "pg": "8.16.0",
     "react": "18.2.0",
     "react-bootstrap": "2.10.10",
